[gd_scene load_steps=9 format=3 uid="uid://cyqx8r4nv3qtx"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_gamemanager"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="2_player"]
[ext_resource type="Script" path="res://scripts/ItemDatabase.gd" id="3_itemdb"]
[ext_resource type="Script" path="res://scripts/CombatManager.gd" id="4_combat"]
[ext_resource type="Script" path="res://scripts/EventManager.gd" id="5_event"]
[ext_resource type="Script" path="res://scripts/MapManager.gd" id="6_map"]
[ext_resource type="Script" path="res://scripts/SaveManager.gd" id="7_save"]
[ext_resource type="Script" path="res://scripts/Session005Test.gd" id="8_test"]

[node name="Main" type="Node"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_gamemanager")

[node name="ItemDatabase" type="Node" parent="GameManager"]
script = ExtResource("3_itemdb")

[node name="CombatManager" type="Node" parent="GameManager"]
script = ExtResource("4_combat")

[node name="EventManager" type="Node" parent="GameManager"]
script = ExtResource("5_event")

[node name="MapManager" type="Node" parent="GameManager"]
script = ExtResource("6_map")

[node name="SaveManager" type="Node" parent="GameManager"]
script = ExtResource("7_save")

[node name="Session005Test" type="Node" parent="GameManager"]
script = ExtResource("8_test")

[node name="UIContainer" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="UIContainer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StatsPanel" type="Panel" parent="UIContainer/GameUI"]
layout_mode = 0
anchor_right = 0.25
anchor_bottom = 0.3

[node name="StatsLabel" type="RichTextLabel" parent="UIContainer/GameUI/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
text = "[color=green]SAFEPLACE STATUS[/color]
HP: 100/100
Food: 100
Water: 100
Location: Test Area"

[node name="InventoryUI" type="Control" parent="UIContainer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="InventoryPanel" type="Panel" parent="UIContainer/InventoryUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0

[node name="InventoryLabel" type="Label" parent="UIContainer/InventoryUI/InventoryPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 46.0
text = "INVENTORY (Press I to close)"
horizontal_alignment = 1

[node name="MenuUI" type="Control" parent="UIContainer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WorldContainer" type="Node2D" parent="."]

[node name="Player" type="Node2D" parent="WorldContainer"]
script = ExtResource("2_player")

[node name="Map" type="Node2D" parent="WorldContainer"]

[node name="Events" type="Node" parent="WorldContainer"]

[node name="AudioManager" type="Node" parent="."]

[node name="DebugContainer" type="CanvasLayer" parent="."]
layer = 100

[node name="DebugPanel" type="Panel" parent="DebugContainer"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -150.0
offset_right = 0.0
offset_bottom = 0.0

[node name="DebugLabel" type="RichTextLabel" parent="DebugContainer/DebugPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
text = "[color=yellow]DEBUG INFO[/color]
Session #004 Active
Core Systems: ✅ ItemDatabase
Main Scene: ✅ Loaded
Player: ⏳ Loading..." 